--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "jenkins-tests",
-  "version": "1.0.1",
+  "name": "webapp",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "directories": {
-    "test": "tests"
+    "test": "test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "koa": "^2.6.2",
+    "koa-router": "^7.4.0"
+  },
   "devDependencies": {
     "mocha": "^5.2.0"
   },
